# octoraster

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindSDL2.cmake
src/: int.h  main.cpp  matrix.h  quaternion.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  vector.h
